--- a/manifest.json
+++ b/manifest.json
@@ -7,7 +7,7 @@
 
     "browser_action": {
         "default_popup": "popup.js",
-        "default_title": "Click here"
+        "default_icon": "icon.png"
     },
 
     "permissions": [
